# multi-scraper-framework

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: COORDINATE_EXTRACTION_GUIDE.md  DATA_PIPELINE_OVERVIEW.md  DECISION_FLOWCHART.md  SCRAPING_METHOD_GALLERY.md
examples/method_1_beautifulsoup/csl_finance/: README.md  csl_finance_branches.csv  csl_finance_branches.xlsx  extract_csl_data.py
examples/method_1_beautifulsoup/nido_edelweiss/: README.md  nido_branches.xlsx  nido_html_branches.csv  parse_nido_html.py
examples/method_1_beautifulsoup/shubham_housing/: README.md  extract_shubham_data.py  shubham_branches.csv  shubham_branches.xlsx
examples/method_2_direct_api/apac_finance/: README.md  apac_fin_branches_with_coords.xlsx  apacfin_branch.py  apacfin_branches.csv  apacfin_branches_with_coords.csv  apacfin_state.py  extract_apacfin_coords.py  extract_apacfin_data.py  process_apacfin_embed.py
examples/method_2_direct_api/icici_hfc/: README.md  add_icici_hfc_coords.py  icici_hfc.py  icici_hfc_branches.csv  icici_hfc_branches_with_coord.xlsx  icici_hfc_branches_with_coords.csv  icici_hfc_scraper.py
examples/method_2_direct_api/indusind_bank/: README.md  extract_indusind_data.py  indusind_branch.xlsx  indusind_branches.csv
examples/method_3_playwright/protium/: README.md  fix_protium_csv.py  (+4 more)
pipeline/: README.md
pipeline/geocoding/: address_geocoder.py  coordinate_extractor.py
pipeline/samples/: sample_input.csv  sample_output.csv
pipeline/validation/: address_similarity.py  compare_by_pincode.py  find_duplicates.py
(+34 files in other folders)
